--- a/2d_envs/results.ipynb
+++ b/2d_envs/results.ipynb
@@ -410,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
