data9 - expd3 100 Hz o2 u1

--- a/2d_envs/results.ipynb
+++ b/2d_envs/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T15:32:28.402234Z",
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os as os\n",
     "\n",
-    "path = \"./results/\""
+    "path = \"./results_100/\""
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T15:32:28.416700Z",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T15:32:28.492968Z",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T15:33:12.915651Z",
@@ -226,20 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No data for OurDDPG on MR-env. Skipping.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No data for OurDDPG on MR-env. Skipping.\n",
       "No data for TD3 on MR-env. Skipping.\n",
       "No data for SAC on MR-env. Skipping.\n"
      ]
@@ -264,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +268,7 @@
       "OurDDPG:\n",
       "No files found matching the pattern.\n",
       "ExpD3:\n",
-      "Average success rate during training over 10 seeds: 97.497 %\n",
+      "No files found matching the pattern.\n",
       "TD3:\n",
       "No files found matching the pattern.\n",
       "SAC:\n",
@@ -327,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
