--- a/results_gazebo.ipynb
+++ b/results_gazebo.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +172,14 @@
     "    \"./results/eval_ExpD3_64_128_2_2.npz\",\n",
     "    \"./results/eval_ExpD3_64_128_2_3.npz\",\n",
     "]\n",
+    "\n",
+    "file_paths = [\n",
+    "    \"./runs/run_20250317/results/eval_ExpD3_64_128_2_0.npz\",\n",
+    "    \"./runs/run_20250317/results/eval_ExpD3_64_128_2_1.npz\",\n",
+    "    \"./runs/run_20250317/results/eval_ExpD3_64_128_2_2.npz\",\n",
+    "    \"./runs/run_20250317results/eval_ExpD3_64_128_2_3.npz\",\n",
+    "]\n",
+    "\n",
     "plot_evaluation_results(file_paths[:1], smooth_length=1)\n",
     "plot_evaluation_results(file_paths[1:2], smooth_length=1)\n",
     "plot_evaluation_results(file_paths[2:3], smooth_length=1)\n",
@@ -181,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +251,7 @@
     "        for i in range(1, 6):\n",
     "            try:\n",
     "                # Load the data\n",
-    "                data = np.load(f'./trajectories/seed_{k}/trajectory_ExpD3_64_128_2_{j}_{i}.npz')\n",
+    "                data = np.load(f'./runs/run_20250317/trajectories/seed_{k}/trajectory_ExpD3_64_128_2_{j}_{i}.npz')\n",
     "            except:\n",
     "                pass\n",
     "            pose = data['Trajectory']\n",
